# X_Ray_simulator_1

./: CMakeLists.txt  solution.cpp
HELPERS/: constants_generator.py  equation_solving.py  material_generator.py  results_visualizer.py  source_detector_visualizer.py  spectra_converter.py
HELPERS/materials_data/: material_info.txt  remove_last_newline.sh
HELPERS/materials_data/attenuations/: adipose.txt  blood.txt  bone.txt  brain.txt  breast.txt  lens.txt  lung.txt  muscle.txt  ovary.txt
HELPERS/sd_vis_data/: pixels.txt  rays.txt
HELPERS/spectra/: SPECTRA_120kVp_17deg_1Al.txt  SPECTRA_120kVp_17deg_3Al.txt  SPECTRA_60kVp_17deg_1Al.txt  SPECTRA_60kVp_17deg_3Al.txt
TESTS/: CMakeLists.txt  geometry_test.cpp  logic_test.cpp  tube_test.cpp  tube_test2.cpp  utilities_test.cpp
